# azure-swa-demo

./: .gitignore  .neon  AGENTS.md  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/.azure/: config
docs/: AZURE_DEPLOYMENT_GUIDE.md  FULLSTACK_DEPLOYMENT_GUIDE.md
frontend/: .env.example  index.html  vite.config.ts
frontend/src/: main.ts  style.css
scripts/: setup-azure.sh
