[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for Azure SWA Demo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "gunicorn>=23.0.0",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 8000"
